# EnlilTrading-DataLayer_OHLCV

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
c4_regime/: __init__.py  bocpd.py  cli.py  core.py  detectors.py  errors.py  hmm_rv.py
c4_regime/config/: regime.default.yml
configs/: datalayer.yaml  dataquality.yaml  features.example.yaml  features.yaml  regime.yaml
docs/: ARCHITECTURE.md  C3_FEATURES.md  C4_REGIME.md  DataLayer_OHLCV_Постановка_задачи.md  howto.md  howto_C4.md
ohlcv/: __init__.py  cli.py  datareader.py  version.py
ohlcv/api/: __init__.py  bybit.py
ohlcv/core/: __init__.py  resample.py  validate.py
ohlcv/features/: __init__.py  cli.py  core.py  schema.py  utils.py
ohlcv/io/: __init__.py  cache.py  dataset.py  parquet_store.py  tail_cache.py
ohlcv/quality/: README.md  __init__.py  issues.py  validator.py
ohlcv/regime/: __init__.py  core.py
ohlcv/utils/: timeframes.py
tests/: conftest.py  test_cli_c1.py  test_datareader.py  test_features_cli_integration.py  test_features_core.py  test_features_strict.py  test_quality.py  test_regime_smoke.py  test_resample.py  test_store.py  test_tail_cache.py
tools/: check_latency.py  ensure_missing_threshold.py  quality_report.py
