[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ohlcv-pipeline"
version = "0.3.1"
description = "OHLCV pipeline: C1 (DataLayer), C2 (DataQuality), C3 (Features.Core)"
readme = "README.md"
authors = [{ name = "Project" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15",
  "requests>=2.31",
  "filelock>=3.12",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.6.8",
  "black>=24.8.0",
  "isort>=5.13.2",
  "mypy>=1.8",
  "numba>=0.59",
  "pandas-stubs>=2",
  "types-requests",
  "types-PyYAML",
]

[project.scripts]
c1-ohlcv = "ohlcv.cli:main"
features-core = "ohlcv.features.cli:main"

[tool.pytest.ini_options]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["ohlcv"]

[tool.ruff]
line-length = 100
src = ["ohlcv", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["ohlcv"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ohlcv"]

[[tool.mypy.overrides]]
module = [
  "pandas",
  "pandas.*",
  "requests",
  "yaml",
  "pyarrow",
  "pyarrow.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "ohlcv.cli",
  "ohlcv.features.cli",
]
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false

[tool.setuptools.packages.find]
where = ["."]
include = ["ohlcv*"]
