[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohlcv"
version = "0.1.0"
description = "C1/C2/C3/C4 data layer for OHLCV: ingest, quality, features, regime"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "quant-team" }]
license = { text = "Proprietary" }
keywords = ["ohlcv", "trading", "bybit", "data-quality", "features", "regime"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=2.0,<3.0",
  "numpy>=1.23",
  "click>=8.1",
  "requests>=2.28",
]

[project.optional-dependencies]
parquet = ["pyarrow>=14"]

aio = []

[project.scripts]
ohlcv = "ohlcv.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ohlcv*", "c4_regime*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"ohlcv" = ["configs/*.yaml"]

[tool.ohlcv]
build_signature_env = ["GIT_COMMIT", "CI_COMMIT_SHA", "SOURCE_VERSION", "PYPROJECT_SHA", "GIT_DIRTY"]
